--- a/waiter_app/Gemfile
+++ b/waiter_app/Gemfile
@@ -7,6 +7,9 @@ end
 
 gem 'devise'
 gem 'pry'
+gem 'materialize-sass'
+gem 'material_icons'
+gem 'jquery-rails'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.1.6'
 # Use postgresql as the database for Active Record
